# mcpdockr

./: README.md  pyproject.toml
mcpdoc/: cli.py  main.py
tests/unit_tests/: test_main.py
